--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,5 @@ commands =
 	tidy: robotidy --config .\pyproject.toml /**/*.resource
 	tidy: robotidy --config .\pyproject.toml /**/*.robot
 	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite --reports timestamp,all
+	tests: rfbrowser init
 	tests: robot -d .logs {posargs}
