--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,58 @@
 [tox]
-envlist	= tidy,lint,tests
+envlist	= tidy,lint,servicetests,mobiletests,webtests
 skipsdist	=	true
+parallel=true
+parallel_show_output=false
 
-[testenv]
+[testenv:tidy]
+description = executa o tidy para formatar os arquivos .resource e .robot
+parallel_show_output=false
 deps =
 	tidy: robotframework-tidy
-	lint: robotframework-robocop
 	tests: -r requirements.txt
 commands =
-	tidy: robotidy --config .\pyproject.toml /**/*.resource
-	tidy: robotidy --config .\pyproject.toml /**/*.robot
-	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite --reports timestamp,all
-	tests: rfbrowser init
-	tests: robot -d .logs {posargs}
+	tidy: robotidy --config .\pyproject.toml ./**/*.resource
+	tidy: robotidy --config .\pyproject.toml ./**/*.robot
+	; tests: rfbrowser init
+	; tests: robot -d .logs {posargs}
+
+; [testenv]
+; ; parallel_show_output=true
+; deps =
+; 	tidy: robotframework-tidy
+; 	lint: robotframework-robocop
+; 	tests: -r requirements.txt
+; commands =
+; 	tidy: robotidy --config .\pyproject.toml ./**/*.resource
+; 	tidy: robotidy --config .\pyproject.toml ./**/*.robot
+; 	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+; 	; tests: rfbrowser init
+; 	tests: robot -d .logs {posargs}
+
+[testenv:mobiletests]
+parallel=true
+parallel_show_output=true
+deps =
+	mobiletests: -r requirements.txt
+commands =
+	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+	mobiletests: robot -d .logs_mobile -i mobiletest {posargs}
+
+[testenv:servicetests]
+parallel=true
+parallel_show_output=true
+deps =
+	mobiletests: -r requirements.txt
+commands =
+	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+	mobiletests: robot -d .logs_service -i servicetest {posargs}
+
+[testenv:webtests]
+parallel=true
+parallel_show_output=true
+deps =
+	webtests: -r requirements.txt
+commands =
+	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+	webtests: rfbrowser init
+	webtests: robot -d .logs_web -i webtest {posargs}
