Ajuste no tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -42,10 +42,10 @@ commands =
 parallel=true
 parallel_show_output=true
 deps =
-	mobiletests: -r requirements.txt
+	servicetests: -r requirements.txt
 commands =
 	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
-	mobiletests: robot -d .logs_service -i servicetest {posargs}
+	servicetests: robot -d .logs_service -i servicetest {posargs}
 
 [testenv:webtests]
 parallel=true
