--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-robotframework>=5.0.1,<=5.0.2
-robotframework-browser>=14.0.0
-robotframework-appiumlibrary==1.6.3
-robotframework-requests==0.9.3
-robotframework-tidy==3.2
+robotframework>=6.0.0,<=6.0.1
+robotframework-browser>=14.3.0
+robotframework-appiumlibrary==2.0.0
+robotframework-requests==0.9.4
+robotframework-tidy>=3.3
 PyYAML==6.0
