--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
 	servicetests: -r requirements.txt
 commands =
 	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
-	servicetests: robot -d .logs_service -i servicetest {posargs}
+	servicetests: robot -d .logs_service -e mobiletest -e webtest {posargs}
 
 [testenv:mobiletests]
 parallel=true
@@ -30,7 +30,7 @@ deps =
 	mobiletests: -r requirements.txt
 commands =
 	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
-	mobiletests: robot -d .logs_mobile -i mobiletest {posargs}
+	mobiletests: robot -d .logs_mobile -e servicetest -e webtest {posargs}
 
 [testenv:webtests]
 parallel=true
@@ -40,4 +40,4 @@ deps =
 commands =
 	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
 	webtests: rfbrowser init
-	webtests: robot -d .logs_web -i webtest {posargs}
+	webtests: robot -d .logs_web -e servicetest -e mobiletest {posargs}
