Encapsulamento de keywords e ajustes gerais na estrutura de execução

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ parallel_show_output=true
 deps =
 	servicetests: -r requirements.txt
 commands =
-	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+	lint: robocop --reports timestamp,all
 	servicetests: robot -d .logs_service -e mobiletest -e webtest {posargs}
 
 [testenv:mobiletests]
@@ -29,7 +29,7 @@ parallel_show_output=true
 deps =
 	mobiletests: -r requirements.txt
 commands =
-	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+	lint: robocop --reports timestamp,all
 	mobiletests: robot -d .logs_mobile -e servicetest -e webtest {posargs}
 
 [testenv:webtests]
@@ -38,6 +38,6 @@ parallel_show_output=true
 deps =
 	webtests: -r requirements.txt
 commands =
-	lint: robocop -e missing-space-after-comment -e missing-doc-keyword -e missing-doc-suite -e empty-lines-between-sections --reports timestamp,all
+	lint: robocop --reports timestamp,all
 	webtests: rfbrowser init
 	webtests: robot -d .logs_web -e servicetest -e mobiletest {posargs}
