--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,8 @@
 root = true
 
 [*]
-indent_style = tab
-indent_size = 1
+indent_style = space
+indent_size = 2
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
