--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
+    pipx install tox
     pip install -r requirements.txt
     rfbrowser init
   displayName: 'Install dependencies'
