--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,17 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
-    pipx install tox
     pip install -r requirements.txt
     rfbrowser init
   displayName: 'Install dependencies'
 
 - script: |
-    tox run-parallel -p 3 -- .
+    robot -d .logs_web -x output-xunit.xml -e servicetest -e mobiletest
+  continueOnError: true
   displayName: 'Run All Tests'
+
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '.logs_web/output-xunit.xml'
+  displayName: 'Publish Test Results'
