--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,12 +26,12 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d .logs_web -x output-xunit.xml -e servicetest -e mobiletest
+    robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run All Tests'
 
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '.logs_web/output-xunit.xml'
+    testResultsFiles: 'logs_web/output-xunit.xml'
   displayName: 'Publish Test Results'
