Ajustes para execução de CI no Azure DevOps

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,13 @@ parallel_show_output=false
 description = executa o tidy para formatar os arquivos .resource e .robot, faz a verificação do código com o robocop
 parallel_show_output=false
 deps =
-	robotframework-robocop
   robotframework-tidy
-  {servicetests,mobiletests,webtests}: -r requirements.txt
+	robotframework-robocop
+  webtests: -r requirements.txt
+  webtests: rfbrowser init
+  servicetests: robotframework-requests
+  mobiletests: robotframework-appiumlibrary
+
 commands_pre =
   robotidy --config .\pyproject.toml ./**/*.resource
 	robotidy --config .\pyproject.toml ./**/*.robot
@@ -18,5 +22,4 @@ commands_pre =
 commands =
   servicetests: robot -d .logs_service -e mobiletest -e webtest {posargs}
   mobiletests: robot -d .logs_mobile -e servicetest -e webtest {posargs}
-  webtests: rfbrowser init
 	webtests: robot -d .logs_web -e servicetest -e mobiletest {posargs}
