--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,6 @@ deps =
   robotframework-tidy
 	robotframework-robocop
   webtests: -r requirements.txt
-  webtests: rfbrowser init
   servicetests: robotframework-requests
   mobiletests: robotframework-appiumlibrary
 
@@ -20,6 +19,7 @@ commands_pre =
 	robotidy --config .\pyproject.toml ./**/*.robot
   robocop -e missing-space-after-comment -e missing-doc-keyword -e empty-lines-between-sections --reports timestamp,all
 commands =
-  servicetests: robot -d .logs_service -e mobiletest -e webtest {posargs}
-  mobiletests: robot -d .logs_mobile -e servicetest -e webtest {posargs}
-	webtests: robot -d .logs_web -e servicetest -e mobiletest {posargs}
+  servicetests: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
+  mobiletests: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
+  webtests: rfbrowser init
+	webtests: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
