Ajuste na estrutura para execução em nuvem e local

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist	= tidy,lint,servicetests,mobiletests,webtests
+envlist	= servicetests,servicetests-local,mobiletests,mobiletests-local,webtests,webtests-local
 skipsdist	=	true
 parallel=true
 parallel_show_output=false
@@ -8,11 +8,12 @@ parallel_show_output=false
 description = executa o tidy para formatar os arquivos .resource e .robot, faz a verificação do código com o robocop
 parallel_show_output=false
 deps =
-  robotframework-tidy
-	robotframework-robocop
-  webtests: -r requirements.txt
-  servicetests: robotframework-requests
-  mobiletests: robotframework-appiumlibrary
+  servicetests-local: -r service-local_requirements.txt
+  servicetests: -r service_requirements.txt
+  mobiletests-local: -r mobile-local_requirements.txt
+  mobiletests: -r mobile_requirements.txt
+  webtests-local: -r web-local_requirements.txt
+  webtests: -r web_requirements.txt
 
 commands_pre =
   robotidy --config .\pyproject.toml ./**/*.resource
@@ -21,5 +22,5 @@ commands_pre =
 commands =
   servicetests: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
   mobiletests: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
-  webtests: rfbrowser init
 	webtests: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
+	webtests-local: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
