--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,14 +21,15 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
-    pip install -r requirements.txt
+    pip install tox
+    pip install -r web_requirements.txt
     rfbrowser init
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest .
+    tox run-parallel -p 3 -e webtests -- .
   continueOnError: true
-  displayName: 'Run All Tests'
+  displayName: 'Run Web Tests'
 
 - task: PublishTestResults@2
   inputs:
