--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    tox run-parallel -p 3 -e webtests -- .
+    robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
