--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist	= servicetests,servicetests-local,mobiletests,mobiletests-local,webtests,webtests-local
+envlist	= servicetests-local,mobiletests-local,webtests-local
 skipsdist	=	true
 parallel=true
 parallel_show_output=false
@@ -9,11 +9,8 @@ description = executa o tidy para formatar os arquivos .resource e .robot, faz a
 parallel_show_output=false
 deps =
   servicetests-local: -r service-local_requirements.txt
-  servicetests: -r service_requirements.txt
   mobiletests-local: -r mobile-local_requirements.txt
-  mobiletests: -r mobile_requirements.txt
   webtests-local: -r web-local_requirements.txt
-  webtests: -r web_requirements.txt
 
 commands_pre =
   robotidy --config .\pyproject.toml ./**/*.resource
@@ -22,5 +19,4 @@ commands_pre =
 commands =
   servicetests: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
   mobiletests: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
-	webtests: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
 	webtests-local: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
