Atualizado para o Appium 2.0

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,6 @@ commands_pre =
 	robotidy --config .\pyproject.toml ./**/*.robot
   robocop -e missing-space-after-comment -e missing-doc-keyword -e empty-lines-between-sections --reports timestamp,all
 commands =
-  servicetests: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
-  mobiletests: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
+  servicetests-local: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
+  mobiletests-local: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
 	webtests-local: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
