--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
     web-tests:
-        runs-on: ubuntu-20.04
+        runs-on: windows-latest
         steps:
             - name: Checkout
               uses: actions/checkout@v3
@@ -14,17 +14,15 @@ jobs:
               with:
                 python-version: '3.10'
 
-            - name: Install Node.js 19.1
+            - name: Install Node.js latest
               uses: actions/setup-node@v3
               with:
-                node-version: '19.1'
+                node-version: 'latest'
 
             - name: Install Requiriments
               run: |
                 python -m pip install --upgrade pip
                 pip install -U -r web_requirements.txt
-                sudo npm install @playwright/test
-                sudo npx install playwright install-deps
                 rfbrowser init
             - name: Run RF Web Tests
               run: robot -d ./logs_web \
