--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -6,23 +6,33 @@ jobs:
     web-tests:
         runs-on: windows-latest
         steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+            -   name: Checkout
+                uses: actions/checkout@v3
 
-            - name: Install Python 3.10
-              uses: actions/setup-python@v4
-              with:
-                python-version: '3.10'
+            -   name: Install Python 3.10
+                uses: actions/setup-python@v4
+                with:
+                    python-version: '3.10'
 
-            - name: Install Node.js latest
-              uses: actions/setup-node@v3
-              with:
-                node-version: 'latest'
+            -   name: Install Node.js latest
+                uses: actions/setup-node@v3
+                with:
+                    node-version: 'latest'
 
-            - name: Install Requiriments
-              run: |
-                python -m pip install --upgrade pip
-                pip install -U -r web_requirements.txt
-                rfbrowser init
-            - name: Run RF Web Tests
-              run: robot -d ./logs_web -e servicetest -e mobiletest .
+            -   name: Install Requiriments
+                run: |
+                    python -m pip install --upgrade pip
+                    pip install -U -r web_requirements.txt
+                    rfbrowser init
+
+            -   name: Run RF Web Tests
+                run: robot -d ./logs_web -e servicetest -e mobiletest .
+
+            -   name: Upload Tests Results
+                if: always()
+                uses: actions/upload-artifact@v3
+                with:
+                    name: results-chromium
+                    path: ./logs_web
+                    if-no-files-found: ignore
+                    retention-days: 2
