add send report

--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
     web-tests:
         runs-on: windows-latest
+        permissions: write-all
         steps:
             -   name: Checkout
                 uses: actions/checkout@v3
@@ -36,3 +37,17 @@ jobs:
                     path: ./logs_web
                     if-no-files-found: ignore
                     retention-days: 2
+
+            -   name: Download Tests Results
+                if: always()
+                uses: actions/download-artifact@v1
+                with:
+                    name: results-chromium
+                
+            -   name: Send Report
+                if: always()
+                uses: joonvena/robotframework-reporter-action@v2.1
+                with:
+                    report_path: results-chromium
+                    gh_access_token: ${{ secrets.GITHUB_TOKEN }}
+                    show_passed_tests: true
