add send report

--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -50,4 +50,4 @@ jobs:
                 with:
                     report_path: results-chromium
                     gh_access_token: ${{ secrets.GITHUB_TOKEN }}
-                    show_passed_tests: true
+                    show_passed_tests: false
