add matrix de execução

--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -4,8 +4,12 @@ on: [push]
 
 jobs:
     web-tests:
-        runs-on: windows-latest
+        runs-on: ubuntu-latest
         permissions: write-all
+        strategy:
+            matrix:
+                browser: [chromium,firefox,webkit]
+            fail-fast: false
         steps:
             -   name: Checkout
                 uses: actions/checkout@v3
@@ -27,13 +31,13 @@ jobs:
                     rfbrowser init
 
             -   name: Run RF Web Tests
-                run: robot -d ./logs_web -e servicetest -e mobiletest .
+                run: robot -d ./logs_web -v BROWSER:${{ matrix.browser }} -e servicetest -e mobiletest .
 
             -   name: Upload Tests Results
                 if: always()
                 uses: actions/upload-artifact@v3
                 with:
-                    name: results-chromium
+                    name: results-${{ matrix.browser }}
                     path: ./logs_web
                     if-no-files-found: ignore
                     retention-days: 2
@@ -42,12 +46,12 @@ jobs:
                 if: always()
                 uses: actions/download-artifact@v1
                 with:
-                    name: results-chromium
+                    name: results-${{ matrix.browser }}
                 
             -   name: Send Report
                 if: always()
                 uses: joonvena/robotframework-reporter-action@v2.1
                 with:
-                    report_path: results-chromium
+                    report_path: results-${{ matrix.browser }}
                     gh_access_token: ${{ secrets.GITHUB_TOKEN }}
                     show_passed_tests: false
