--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -28,6 +28,8 @@ jobs:
                 run: |
                     python -m pip install --upgrade pip
                     pip install -U -r web_requirements.txt
+                    sudo npm install @playwright/test
+                    sudo npx playwright install-deps
                     rfbrowser init
 
             -   name: Run RF Web Tests
