--- a/.github/workflows/webtests-workflow.yml
+++ b/.github/workflows/webtests-workflow.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
     web-tests:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         permissions: write-all
         strategy:
             matrix:
