--- a/tox.ini
+++ b/tox.ini
@@ -20,4 +20,4 @@ commands =
   servicetests-local: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
   mobiletests-local: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
 	webtests-local: rfbrowser init
-	webtests-local: robot -d ./logs_web -x output-xunit.xml -e servicetest -e mobiletest {posargs}
+	webtests-local: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -e servicetest -e mobiletest {posargs}
