--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ pool:
   vmImage: windows-latest
 strategy:
   matrix:
+    browser: {chromium, firefox, webkit}
     Python38:
       python.version: '3.8'
 
@@ -26,7 +27,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{ matrix.browser }} -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
