--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     rfbrowser init
   displayName: 'Install dependencies'
 
-- script: |
+- bash: |
     robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{ matrix.browser }} -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
