--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
   displayName: 'Install dependencies'
 
 - bash: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{ matrix.browser }} -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(matrix.browser) -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
