--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,11 +6,13 @@
 trigger:
 - master
 
+variables:
+  browser: {chromium, firefox, webkit}
+
 pool:
   vmImage: windows-latest
 strategy:
   matrix:
-    browser: {chromium, firefox, webkit}
     Python38:
       python.version: '3.8'
 
@@ -27,7 +29,7 @@ steps:
   displayName: 'Install dependencies'
 
 - bash: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(matrix.browser) -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(browser) -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
