--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: windows-latest
 strategy:
   matrix:
-    browser: {[chromium, firefox, webkit]}
+    browser: [chromium, firefox, webkit]
     Python38:
       python.version: '3.8'
 
