--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,10 @@ pool:
 strategy:
   maxParallel: 2
   matrix:
-    browser: chromium
-    browser: firefox
+    Win_Chromium:
+      Browser: chromium
+    Win_Firefox:
+      Browser: firefox
 
     Python38:
       python.version: '3.8'
@@ -30,7 +32,7 @@ steps:
   displayName: 'Install dependencies'
 
 - bash: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{matrix.browser}} -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{matrix.Browser}} -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
