--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,24 +6,21 @@
 trigger:
 - master
 
-pool:
-  vmImage: windows-latest
-strategy:
-  maxParallel: 2
-  matrix:
-    Win_Chromium:
-      Browser: chromium
-    Win_Firefox:
-      Browser: firefox
-
+stages:
+  - stage: Install Python 3.8
+  strategy:
     Python38:
       python.version: '3.8'
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+jobs:
+  - job: Windows
+  pool:
+    vmImage: windows-latest
+  steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '$(python.version)'
+      displayName: 'Use Python $(python.version)'
 
 - script: |
     python -m pip install --upgrade pip
