--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,21 +6,18 @@
 trigger:
 - master
 
-stages:
-  - stage: Install Python 3.8
-  strategy:
+pool:
+  vmImage: windows-latest
+strategy:
+  matrix:
     Python38:
       python.version: '3.8'
 
-jobs:
-  - job: Windows
-  pool:
-    vmImage: windows-latest
-  steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '$(python.version)'
-      displayName: 'Use Python $(python.version)'
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
 - script: |
     python -m pip install --upgrade pip
@@ -28,7 +25,7 @@ jobs:
     rfbrowser init
   displayName: 'Install dependencies'
 
-- bash: |
+- script: |
     robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
