--- a/.github/workflows/mobiletests-workflow.yml
+++ b/.github/workflows/mobiletests-workflow.yml
@@ -16,10 +16,16 @@ jobs:
 
     steps:
       - name: Checkout do repositório
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'oracle'
+          java-version: 11
 
       - name: Configuração do ambiente Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
