--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,10 @@ strategy:
   matrix:
     Python38:
       python.version: '3.8'
+    chromium:
+      BROWSER: chromium
+    firefox:
+      BROWSER: firefox
 
 steps:
 - task: UsePythonVersion@0
@@ -26,7 +30,8 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -e servicetest -e mobiletest .
+    echo "Executando testes no $BROWSER"
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$BROWSER -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
