--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,42 +1,55 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
-- main
+  - main
 
-pool:
-  vmImage: windows-latest
-strategy:
-  matrix:
-    Python38:
-      python.version: '3.8'
-    chromium:
-      BROWSER: chromium
-    firefox:
-      BROWSER: firefox
+  pr:
+  - main
 
-      steps:
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: '$(python.version)'
-        displayName: 'Use Python $(python.version)'
+  pool:
+    vmImage: 'ubuntu-latest'
 
-      - script: |
-          python -m pip install --upgrade pip
-          pip install -r web_requirements.txt
-          rfbrowser init
-        displayName: 'Install dependencies'
+  jobs:
+  - job: RunRobotTests
+    strategy:
+      matrix:
+        browser:
+          - chromium
+          - firefox
+          - webkit
 
-      - script: |
-          echo "Executando testes no $BROWSER"
-          robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$BROWSER -e servicetest -e mobiletest .
-        continueOnError: true
-        displayName: 'Run Web Tests'
+    steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.x' # Especifique a versão do Python que deseja usar
+        addToPath: true
 
-      - task: PublishTestResults@2
-        inputs:
-          testResultsFormat: 'JUnit'
-          testResultsFiles: 'logs_web/output-xunit.xml'
-        displayName: 'Publish Test Results'
+    - script: pip install --upgrade pip
+      displayName: 'Upgrade Pip'
+
+    - script: pip install -r requirements.txt
+      displayName: 'Install Requirements'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'current' # Substitua pelo nome do seu pipeline de construção se for diferente
+        path: $(System.ArtifactsDirectory)
+
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.x'
+        addToPath: true
+
+    - script: |
+        python -m pip install --upgrade pip
+        pip install -r web_requirements.txt
+        rfbrowser init
+      displayName: 'Install dependencies'
+
+    - script: |
+        robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(browser) -e servicetest -e mobiletest .
+      displayName: 'Run Robot Tests'
+
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'logs_web/output-xunit.xml'
+      displayName: 'Publish Test Results'
