--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,55 +1,43 @@
+# Python package
+# Create and test a Python package on multiple Python versions.
+# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+
 trigger:
   - main
 
-  pr:
-  - main
-
-  pool:
-    vmImage: 'ubuntu-latest'
+pool:
+  vmImage: 'ubuntu-latest'
 
   jobs:
-  - job: RunRobotTests
-    strategy:
-      matrix:
-        browser:
-          - chromium
-          - firefox
-          - webkit
+    - job: RunRobotTests
+      strategy:
+        matrix:
+          browser:
+            - chromium
+            - firefox
+            - webkit
 
-    steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.x' # Especifique a versão do Python que deseja usar
-        addToPath: true
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.10'
+    addToPath: true
+  displayName: 'Use Python 3.10'
 
-    - script: pip install --upgrade pip
-      displayName: 'Upgrade Pip'
+- script: |
+    python -m pip install --upgrade pip
+    pip install -r web_requirements.txt
+    rfbrowser init
+  displayName: 'Install dependencies'
 
-    - script: pip install -r requirements.txt
-      displayName: 'Install Requirements'
+- script: |
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{ matrix.browser }} -e servicetest -e mobiletest .
+  continueOnError: true
+  displayName: 'Run Web Tests'
 
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        source: 'current' # Substitua pelo nome do seu pipeline de construção se for diferente
-        path: $(System.ArtifactsDirectory)
-
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.x'
-        addToPath: true
-
-    - script: |
-        python -m pip install --upgrade pip
-        pip install -r web_requirements.txt
-        rfbrowser init
-      displayName: 'Install dependencies'
-
-    - script: |
-        robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(browser) -e servicetest -e mobiletest .
-      displayName: 'Run Robot Tests'
-
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'JUnit'
-        testResultsFiles: 'logs_web/output-xunit.xml'
-      displayName: 'Publish Test Results'
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: 'logs_web/output-xunit.xml'
+  displayName: 'Publish Test Results'
