--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
 trigger:
-  - main
+  - '*'
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -13,10 +13,12 @@ pool:
     - job: RunRobotTests
       strategy:
         matrix:
-          browser:
-            - chromium
-            - firefox
-            - webkit
+          chromium:
+            BROWSER: chromium
+          firefox:
+            BROWSER: firefox
+          webkit:
+            BROWSER: webkit
 
 steps:
 - task: UsePythonVersion@0
@@ -32,7 +34,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:${{ matrix.browser }} -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$BROWSER -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
