--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$BROWSER -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(BROWSER) -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
