--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,10 @@ pool:
     - job: RunRobotTests
       strategy:
         matrix:
-          chromium:
-            BROWSER: chromium
-          firefox:
-            BROWSER: firefox
-          webkit:
-            BROWSER: webkit
+          browser:
+            - chromium
+            - firefox
+            - webkit
 
 steps:
 - task: UsePythonVersion@0
@@ -34,7 +32,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(BROWSER) -e servicetest -e mobiletest .
+    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(browser) -e servicetest -e mobiletest .
   continueOnError: true
   displayName: 'Run Web Tests'
 
