--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,25 +19,28 @@ pool:
             - webkit
 
 steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.10'
-    addToPath: true
-  displayName: 'Use Python 3.10'
+  - script: echo Running tests on $(browser)
+    displayName: 'Print Browser'
 
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r web_requirements.txt
-    rfbrowser init
-  displayName: 'Install dependencies'
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.10'
+      addToPath: true
+    displayName: 'Use Python 3.10'
 
-- script: |
-    robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -v BROWSER:$(browser) -e servicetest -e mobiletest .
-  continueOnError: true
-  displayName: 'Run Web Tests'
+  - script: |
+      python -m pip install --upgrade pip
+      pip install -r web_requirements.txt
+      rfbrowser init
+    displayName: 'Install dependencies'
 
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: 'logs_web/output-xunit.xml'
-  displayName: 'Publish Test Results'
+  - script: |
+      robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$(browser) -e servicetest -e mobiletest .
+    continueOnError: true
+    displayName: 'Run Web Tests'
+
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: 'logs_web/output-xunit.xml'
+    displayName: 'Publish Test Results'
