--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ pool:
             - webkit
 
 steps:
-  - script: echo Running tests on ${{ matrix.browser }}
+  - script: echo Running tests on ${{ browser }}
     displayName: 'Print Browser'
 
   - task: UsePythonVersion@0
