--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,39 +5,44 @@
 
 trigger:
   - '*'
+jobs:
+  - job: Run Mobile Testa
+    strategy:
+      matrix:
+        browser: [chromium, firefox, webkit]
 
-pool:
-  vmImage: 'ubuntu-latest'
+  - job: ConfigureEnv
+    displayName: "Print Browsers"
+    pool:
+      vmImage: 'ubuntu-latest'
 
-  strategy:
-    matrix:
-      browser:
-      - chromium
-      - firefox
-      - webkit
+    steps:
+    - script: echo "Executando o job nos navegadores $browser"
 
-steps:
-  - bash: echo Running tests on $(browser)
-    displayName: 'Print Browser'
+    - script: |
+      sudo apt update
+      sudo apt install python3 -y
+    diaplayName: "Install Python"
 
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.10'
-      addToPath: true
-    displayName: 'Use Python 3.10'
-
-  - script: |
+  - job: InstallDeps
+    displayName: "Installing dependencies"
+    dependsOn: ConfigureEnv
+    steps:
+    - script: |
       python -m pip install --upgrade pip
       pip install -r web_requirements.txt
       rfbrowser init
     displayName: 'Install dependencies'
 
-  - script: |
-      robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$(browser) -e servicetest -e mobiletest .
+  - job: RunTests
+    displayName: "Run Web Tests"
+    dependsOn: InstallDeps
+    - script: |
+      robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
     continueOnError: true
-    displayName: 'Run Web Tests'
 
-  - task: PublishTestResults@2
+  - job: PublishTestResults@2
+    dependsOn: RunTests
     inputs:
       testResultsFormat: 'JUnit'
       testResultsFiles: 'logs_web/output-xunit.xml'
