--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,12 @@ jobs:
     steps:
     - script: echo "Executando o job nos navegadores $browser"
     diaplayName: "Install Python"
+    
+    - task: UsePyhtonVersion@0
+      inputs:
+        versionSpec: '3.10'
+        addToPath: true
+      displayName: "Use Python 3.10"
 
   - job: InstallDeps
     displayName: "Installing dependencies"
