--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
     - script: echo "Executando o job nos navegadores $browser"
     diaplayName: "Install Python"
     
-    - task: UsePyhtonVersion@0
+    - task: UsePythonVersion@0
       inputs:
         versionSpec: '3.10'
         addToPath: true
