--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,14 +24,13 @@ jobs:
         addToPath: true
       displayName: "Use Python 3.10"
 
-    - script: pip install -r web_requirements.txt
+    - bash: pip install -r web_requirements.txt
     displayName: "Install dependencies"
 
   - job: RunTests
     displayName: "Run Web Tests"
     dependsOn: ConfigureEnv
-    - script: |
-      robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
+    - script: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
     continueOnError: true
 
   - job: PublishTestResults@2
