--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
   - job: RunTests
     displayName: "Run Web Tests"
     dependsOn: ConfigureEnv
-    - script: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
+    - bash: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
     continueOnError: true
 
   - job: PublishTestResults@2
