--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
     - bash: pip install -r web_requirements.txt
 
   - job: RunTests
-    - steps:
+    steps:
       displayName: "Run Web Tests"
       dependsOn: ConfigureEnv
       - bash: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
