--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       displayName: "Run Web Tests"
       dependsOn: ConfigureEnv
-      - bash: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
+      - script: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
       continueOnError: true
 
   - job: PublishTestResults@2
