--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,21 +11,5 @@ jobs:
     strategy:
       matrix:
         browser: [ 'chromium', 'firefox', 'webkit' ]
-  - job: ConfigureEnv
-    displayName: "Print Browsers"
-    pool:
-      vmImage: 'ubuntu-latest'
     steps:
-    - script: echo "Executando o job nos navegadores $browser"
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.10'
-        addToPath: true
-      displayName: "Use Python 3.10"
-    - script: pip install -r web_requirements.txt
-  - job: RunTests
-    displayName: "Run Web Tests"
-    dependsOn: ConfigureEnv
-    steps:
-    - script: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed --variable BROWSER:$browser -e servicetest -e mobiletest .
-    continueOnError: true
+    - script: echo "Executando o job no $browser"
