--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ jobs:
   - job: Run Mobile Testa
     strategy:
       matrix:
-        browser: chromium
+        browser:
+        - chromium
     steps:
     - script: echo "Executando o job no $browser"
