--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,8 @@ jobs:
     matrix:
       browser: [ 'chromium' ]
   steps:
-  - script: Executando o job com o browser $browser
+  - script: | 
+    Executando o job com o browser $browser
   
   - job: ConfigurarAmbiente
     displayName: "Configurar ambiente"
