--- a/.editorconfig
+++ b/.editorconfig
@@ -5,12 +5,12 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 1
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.yaml]
+[*.yml]
 indent_style = space
 indent_size = 1
