--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,11 +6,11 @@ pool:
 
 strategy:
   matrix:
-    Python38:
-      python.version: '3.8'
+    Python310:
+      python.version: '3.10'
+    Chromium:
       browser: 'chromium'
-    Python39:
-      python.version: '3.9'
+    Firefox:
       browser: 'firefox'
 
 steps:
