--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,8 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     pip install -r web_requirements.txt
-    pip install rfbrowser init
+    rfbrowser init
   displayName: Install dependencies
 
-- script: robot -d ./logs_web -v BROWSER:$(browser) -e servicetest -e mobiletest .
+- script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
   displayName: Run Web Test
