--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,10 @@ steps:
 
 - script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
   displayName: Run Web Test
+  continueOnError: true
+
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: 'logs_web/output-xunit.xml'
+  displayName: 'Publish Test Results'
