config bb pipelines web

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,7 +2,7 @@ image: python:3.10
 
 pipelines:
   default:
-    parallel:
+    - parallel:
       - step:
           name: RunOnUbuntu
           image: ubuntu:latest
